--- a/package.json
+++ b/package.json
@@ -21,8 +21,15 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "bootstrap": "^3.3.7",
+    "c9": "^3.1.3534",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
+    "jquery": "^3.2.1",
+    "js-datepicker": "^2.1.3",
+    "mutationobserver-shim": "^0.3.2",
     "rxjs": "^5.4.2",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
